Fix button icon vertical alignment
The Materialize Framework increased the font-size, but used the same line-height. This fix makes the font-size for the icon inherited.

Updated to new blueprint folder format.

Changed blueprint and changelog for a 1.3.6 release.

--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -104,7 +104,7 @@ a.btn {
 
 .tags a {
 	display: inline-block;
-	margin-bottom: .2rem;
+	margin-bottom: 0.2rem;
 	padding: 0;
 
 	:hover {
@@ -229,6 +229,14 @@ span.badge.new::after {
 	&:hover {
 		background-color: $local-light-primary-color;
 	}
+}
+
+.btn i,
+.btn-large i,
+.btn-floating i,
+.btn-large i,
+.btn-flat i {
+	font-size: inherit;
 }
 
 i.left {
